--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 <body>
     <div class="input-box">
         <h1>배송 조회</h1>
-        <h2>문의 : eonjuress@gmail.com</h2>
+        <h3>문의 : eonjuress@gmail.com</h3>
         <input type="text" id="name" placeholder="이름">
         <input type="text" id="trackingNumber" placeholder="운송장 번호 입력">
-        <button class="btn" onclick="trackShipment()">언주연구회 지침서 배송조회시스템</button>
+        <button class="btn" onclick="trackShipment()">조회</button>
         <a href="login.html" class="link">관리자 페이지</a>
     </div>
 
