--- a/status.html
+++ b/status.html
@@ -37,6 +37,8 @@
 </head>
 <body>
     <h1>배송 현황</h1>
+    <h3>아래 데이터가 존재하지 않을 경우, 잘못 입력하셨거나, 운송장이 아직 등록되지 않았을 수 있습니다.<h3>
+    <t1>해당 문제가 지속된다면, 관리자에게 문의하십시오.</t1>
     <table id="statusTable">
         <thead>
             <tr>
