--- a/status.html
+++ b/status.html
@@ -6,18 +6,24 @@
     <title>배송 현황</title>
     <style>
         body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
+            padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: #f7f7f7;
             color: #333;
         }
+        h1 {
+            color: #ff8c00;
+            margin-bottom: 20px;
+        }
         table {
-            border-collapse: collapse;
             width: 80%;
-            margin: 20px 0;
+            border-collapse: collapse;
+            margin-top: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             background-color: white;
         }
@@ -30,9 +36,6 @@
             background-color: #ff8c00;
             color: white;
         }
-        td:nth-child(3) {
-            width: 150px; /* 전화번호 뒤 4자리 열의 너비 */
-        }
     </style>
 </head>
 <body>
@@ -42,7 +45,7 @@
             <tr>
                 <th>이름</th>
                 <th>운송장번호</th>
-                <th>전화번호 뒤 4자리</th>
+                <th style="width: 150px;">전화번호 뒤 4자리</th>
                 <th>제품명</th>
                 <th>날짜</th>
                 <th>현재 상태</th>
@@ -54,7 +57,25 @@
         </tbody>
     </table>
 
+    <!-- Firebase SDK 추가 -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+
+    <!-- Firebase 초기화 -->
     <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyDciIdx-kQhdCEQqTUskdb6Njq3aAJU_ys",
+    authDomain: "eonjuress-6c0be.firebaseapp.com",
+    databaseURL: "https://eonjuress-6c0be-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "eonjuress-6c0be",
+    storageBucket: "eonjuress-6c0be.appspot.com",
+    messagingSenderId: "955368935065",
+    appId: "1:955368935065:web:c4230ce8a51e1713a5b208"
+        };
+
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+
         function getQueryParams() {
             const params = new URLSearchParams(window.location.search);
             return {
@@ -65,23 +86,26 @@
 
         function loadStatus() {
             const { name, trackingNumber } = getQueryParams();
-            const statuses = JSON.parse(localStorage.getItem('statuses') || '[]');
             const table = document.getElementById('statusTable').getElementsByTagName('tbody')[0];
+            table.innerHTML = ''; // 기존 데이터를 초기화
 
-            statuses
-                .filter(status => status.name === name && status.trackingNumber === trackingNumber)
-                .forEach(({ name, trackingNumber, phoneLast4, productName, date, status, location }) => {
-                    const newRow = table.insertRow();
-                    newRow.innerHTML = `
-                        <td>${name}</td>
-                        <td>${trackingNumber}</td>
-                        <td>${phoneLast4}</td>
-                        <td>${productName}</td>
-                        <td>${date}</td>
-                        <td>${status}</td>
-                        <td>${location}</td>
-                    `;
+            database.ref('statuses').orderByChild('name').equalTo(name).once('value', (snapshot) => {
+                snapshot.forEach((childSnapshot) => {
+                    const statusData = childSnapshot.val();
+                    if (statusData.trackingNumber === trackingNumber) {
+                        const newRow = table.insertRow();
+                        newRow.innerHTML = `
+                            <td>${statusData.name}</td>
+                            <td>${statusData.trackingNumber}</td>
+                            <td>${statusData.phoneLast4}</td>
+                            <td>${statusData.productName}</td>
+                            <td>${statusData.date}</td>
+                            <td>${statusData.status}</td>
+                            <td>${statusData.location}</td>
+                        `;
+                    }
                 });
+            });
         }
 
         document.addEventListener('DOMContentLoaded', loadStatus);
