--- a/status.html
+++ b/status.html
@@ -63,6 +63,7 @@
 
     <!-- Firebase 초기화 -->
     <script>
+    <script>
         const firebaseConfig = {
             apiKey: "AIzaSyDciIdx-kQhdCEQqTUskdb6Njq3aAJU_ys",
             authDomain: "eonjuress-6c0be.firebaseapp.com",
