--- a/status.html
+++ b/status.html
@@ -13,6 +13,7 @@
             height: 100vh;
             background-color: #f7f7f7;
             color: #333;
+            font-family: Arial, sans-serif;
         }
         table {
             border-collapse: collapse;
@@ -33,6 +34,18 @@
         td:nth-child(3) {
             width: 150px; /* 전화번호 뒤 4자리 열의 너비 */
         }
+        .btn-delete {
+            background-color: #ff6347;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .btn-delete:hover {
+            background-color: #d9563f;
+        }
     </style>
 </head>
 <body>
@@ -47,6 +60,7 @@
                 <th>날짜</th>
                 <th>현재 상태</th>
                 <th>위치</th>
+                <th>삭제</th>
             </tr>
         </thead>
         <tbody>
@@ -79,38 +93,42 @@
         document.addEventListener('DOMContentLoaded', loadStatus);
 
         function loadStatus() {
-            const params = getQueryParams();
-            const { name, trackingNumber } = params;
-            const table = document.getElementById('statusTable').getElementsByTagName('tbody')[0];
+            const statusesRef = database.ref('statuses');
+            statusesRef.on('value', (snapshot) => {
+                const statuses = snapshot.val();
+                const table = document.getElementById('statusTable').getElementsByTagName('tbody')[0];
+                table.innerHTML = ''; // 기존 데이터 초기화
 
-            // Firebase에서 데이터 가져오기
-            database.ref('statuses').orderByChild('name_trackingNumber').equalTo(`${name}_${trackingNumber}`).once('value')
-                .then((snapshot) => {
-                    snapshot.forEach((childSnapshot) => {
-                        const data = childSnapshot.val();
+                for (let key in statuses) {
+                    if (statuses.hasOwnProperty(key)) {
+                        const { name, trackingNumber, phoneLast4, productName, date, status, location } = statuses[key];
                         const newRow = table.insertRow();
                         newRow.innerHTML = `
-                            <td>${data.name}</td>
-                            <td>${data.trackingNumber}</td>
-                            <td>${data.phoneLast4}</td>
-                            <td>${data.productName}</td>
-                            <td>${data.date}</td>
-                            <td>${data.status}</td>
-                            <td>${data.location}</td>
+                            <td>${name}</td>
+                            <td>${trackingNumber}</td>
+                            <td>${phoneLast4}</td>
+                            <td>${productName}</td>
+                            <td>${date}</td>
+                            <td>${status}</td>
+                            <td>${location}</td>
+                            <td><button class="btn-delete" onclick="deleteStatus('${key}')">삭제</button></td>
                         `;
-                    });
-                })
-                .catch((error) => {
-                    console.error('데이터 로드 실패', error);
-                });
+                    }
+                }
+            });
         }
 
-        function getQueryParams() {
-            const params = new URLSearchParams(window.location.search);
-            return {
-                name: params.get('name'),
-                trackingNumber: params.get('trackingNumber')
-            };
+        function deleteStatus(key) {
+            if (confirm('정말로 삭제하시겠습니까?')) {
+                database.ref('statuses/' + key).remove()
+                    .then(() => {
+                        alert('삭제되었습니다.');
+                    })
+                    .catch((error) => {
+                        console.error('삭제 실패:', error);
+                        alert('삭제를 실패하였습니다.');
+                    });
+            }
         }
     </script>
 </body>
