--- a/login.html
+++ b/login.html
@@ -1,73 +1,51 @@
+<!-- login.html -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>관리자 로그인</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #f7f7f7;
-            color: #333;
-        }
-        .login-box {
-            background-color: white;
-            padding: 40px;
-            border: 2px solid #ff8c00;
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        input[type="text"], input[type="password"] {
-            padding: 10px;
-            border: 2px solid #ff8c00;
-            border-radius: 5px;
-            margin: 5px;
-            width: 200px;
-        }
-        .btn {
-            background-color: #ff8c00;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            box-shadow: 0 4px #d97700;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-        .btn:active {
-            box-shadow: 0 2px #d97700;
-            transform: translateY(2px);
-        }
-    </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsSHA/3.2.0/sha256.js"></script>
+    <title>로그인</title>
 </head>
 <body>
-    <div class="login-box">
-        <h1>관리자 로그인</h1>
-        <input type="text" id="username" placeholder="아이디">
-        <input type="password" id="password" placeholder="비밀번호">
-        <button class="btn" onclick="login()">로그인</button>
-    </div>
+    <h1>관리자 로그인</h1>
+    <form id="loginForm">
+        <label for="username">아이디:</label>
+        <input type="text" id="username" name="username"><br><br>
+        <label for="password">비밀번호:</label>
+        <input type="password" id="password" name="password"><br><br>
+        <input type="submit" value="로그인">
+    </form>
 
+    <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-database.js"></script>
     <script>
-        function login() {
+        const firebaseConfig = {
+            apiKey: "AIzaSyDciIdx-kQhdCEQqTUskdb6Njq3aAJU_ys",
+            authDomain: "eonjuress-6c0be.firebaseapp.com",
+            databaseURL: "https://eonjuress-6c0be-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "eonjuress-6c0be",
+            storageBucket: "eonjuress-6c0be.appspot.com",
+            messagingSenderId: "955368935065",
+            appId: "1:955368935065:web:c4230ce8a51e1713a5b208"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+
+        const loginForm = document.getElementById('loginForm');
+
+        loginForm.addEventListener('submit', function(event) {
+            event.preventDefault();
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            const correctUsername = 'eonjuress';
-            const correctPassword = 'laoshihao';
-
-            if (username === correctUsername && password === correctPassword) {
-                localStorage.setItem('isLoggedIn', 'true');
-                window.location.href = 'admin.html';
+            if (username === 'eonjuress' && password === 'laoshihao') {
+                window.location.href = 'admin_page.html';
             } else {
-                alert('아이디 또는 비밀번호가 잘못되었습니다.');
+                alert('아이디 또는 비밀번호가 잘못되었습니다. 다시 시도하세요.');
             }
-        }
+        });
     </script>
 </body>
 </html>
