--- a/index.html
+++ b/index.html
@@ -1,30 +1,60 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>운송 조회 입력</title>
+    <title>운송장번호 및 이름 입력</title>
     <style>
-        body { background-color: #FFA500; }
-        h1 { color: #FFFFFF; }
-        form { margin-top: 20px; }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffffcc;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            color: #333;
+        }
+        h1 {
+            color: #ff8c00;
+        }
+        .input-group {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        input[type="text"] {
+            padding: 10px;
+            border: 2px solid #ff8c00;
+            border-radius: 5px;
+            width: 250px;
+        }
+        .btn {
+            background-color: #ff8c00;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .btn:hover {
+            background-color: #e58000;
+        }
     </style>
 </head>
 <body>
     <h1>운송장번호 및 이름 입력</h1>
-    <form id="searchForm">
-        <label for="tracking">운송장번호:</label>
-        <input type="text" id="tracking" name="tracking"><br><br>
-        <label for="name">이름:</label>
-        <input type="text" id="name" name="name"><br><br>
-        <input type="submit" value="확인">
-    </form>
+    <div class="input-group">
+        <input type="text" id="trackingNumber" placeholder="운송장번호">
+        <input type="text" id="name" placeholder="이름">
+        <button class="btn" onclick="checkDetails()">확인</button>
+    </div>
 
-    <div id="message"></div>
-
-    <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-database.js"></script>
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyDciIdx-kQhdCEQqTUskdb6Njq3aAJU_ys",
@@ -36,36 +66,29 @@
             appId: "1:955368935065:web:c4230ce8a51e1713a5b208"
         };
 
-        // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
-        const database = firebase.database();
+        const db = firebase.database();
 
-        const searchForm = document.getElementById('searchForm');
-        const messageDiv = document.getElementById('message');
-
-        searchForm.addEventListener('submit', function(event) {
-            event.preventDefault();
-            const tracking = document.getElementById('tracking').value;
+        function checkDetails() {
+            const trackingNumber = document.getElementById('trackingNumber').value;
             const name = document.getElementById('name').value;
 
-            // Check if tracking and name match in Firebase
-            const ref = database.ref('shipments');
-            ref.orderByChild('tracking').equalTo(tracking).once('value', function(snapshot) {
-                let found = false;
-                snapshot.forEach(function(childSnapshot) {
-                    const shipment = childSnapshot.val();
-                    if (shipment.name === name) {
-                        found = true;
-                        // Redirect to page2.html upon successful match
-                        window.location.href = `page2.html?tracking=${tracking}&name=${name}`;
+            // 예제에서는 간단하게 운송장번호와 이름이 일치하는지만 체크하는 예시입니다.
+            // 실제로는 보안과 유효성 검사를 강화해야 합니다.
+            db.ref('shipments').orderByChild('trackingNumber').equalTo(trackingNumber).once('value', snapshot => {
+                if (snapshot.exists()) {
+                    const shipment = snapshot.val();
+                    const validName = shipment[name];
+                    if (validName) {
+                        window.location.href = 'status.html?trackingNumber=' + trackingNumber + '&name=' + name;
+                    } else {
+                        alert('오류: 입력한 이름과 운송장번호가 일치하지 않습니다.');
                     }
-                });
-
-                if (!found) {
-                    messageDiv.innerText = '입력한 정보가 일치하지 않습니다. 다시 시도하세요.';
+                } else {
+                    alert('오류: 조회된 데이터가 없습니다.');
                 }
             });
-        });
+        }
     </script>
 </body>
 </html>
