--- a/login.html
+++ b/login.html
@@ -1,23 +1,60 @@
-<!-- login.html -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffffcc;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            color: #333;
+        }
+        h1 {
+            color: #ff8c00;
+        }
+        .input-group {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        input[type="text"], input[type="password"] {
+            padding: 10px;
+            border: 2px solid #ff8c00;
+            border-radius: 5px;
+            width: 250px;
+        }
+        .btn {
+            background-color: #ff8c00;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .btn:hover {
+            background-color: #e58000;
+        }
+    </style>
 </head>
 <body>
     <h1>관리자 로그인</h1>
-    <form id="loginForm">
-        <label for="username">아이디:</label>
-        <input type="text" id="username" name="username"><br><br>
-        <label for="password">비밀번호:</label>
-        <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="로그인">
-    </form>
+    <div class="input-group">
+        <input type="text" id="username" placeholder="아이디">
+        <input type="password" id="password" placeholder="비밀번호">
+        <button class="btn" onclick="login()">로그인</button>
+    </div>
 
-    <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-auth.js"></script>
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyDciIdx-kQhdCEQqTUskdb6Njq3aAJU_ys",
@@ -29,23 +66,22 @@
             appId: "1:955368935065:web:c4230ce8a51e1713a5b208"
         };
 
-        // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
-        const database = firebase.database();
+        const auth = firebase.auth();
 
-        const loginForm = document.getElementById('loginForm');
-
-        loginForm.addEventListener('submit', function(event) {
-            event.preventDefault();
+        function login() {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            if (username === 'eonjuress' && password === 'laoshihao') {
-                window.location.href = 'admin_page.html';
-            } else {
-                alert('아이디 또는 비밀번호가 잘못되었습니다. 다시 시도하세요.');
-            }
-        });
+            auth.signInWithEmailAndPassword(username, password)
+                .then((userCredential) => {
+                    // 로그인 성공 시 관리자 페이지로 이동
+                    window.location.href = 'admin.html';
+                })
+                .catch((error) => {
+                    alert('오류: 아이디 또는 비밀번호가 올바르지 않습니다.');
+                });
+        }
     </script>
 </body>
 </html>
